[package]
name = "dofuscator"
version = "0.1.0"
authors = ["ZaWarudo <ZaWaaarudo@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.53"
serde = { version="1.0.110", features = ["derive"] }